--- a/spurious_cues/analysis.ipynb
+++ b/spurious_cues/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,12 @@
     "\n",
     "base = base[~base[\"token\"].apply(is_noise)]\n",
     "magpie = magpie[~magpie[\"token\"].apply(is_noise)]\n",
-    "synth = synth[~synth[\"token\"].apply(is_noise)]\n",
-    "\n",
-    "\n",
-    "# base['attribution'] = normalize(base['attribution'])\n",
-    "# magpie['attribution'] = normalize(magpie['attribution'])\n",
-    "# synth['attribution'] = normalize(synth['attribution'])\n"
+    "synth = synth[~synth[\"token\"].apply(is_noise)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +115,7 @@
        "0.06218049519729795"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +136,7 @@
        "0.11847788212482634"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +157,7 @@
        "0.08675489275717088"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +191,33 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged_df[merged_df['token'].apply(is_named_entity)][['base','magpie','synth']].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07500100158535464"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base['attribution'].mean()"
    ]
   },
   {
