remove index from csv

--- a/contamination/split_babe.ipynb
+++ b/contamination/split_babe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +111,12 @@
     "\n",
     "# map label (same as in their paper)\n",
     "df_new['label'] = df_new['label'].replace({0: '0 (not biased)', 1: '1 (biased)'})\n",
-    "df_new.to_csv(\"babe_contamination.csv\")"
+    "df_new.to_csv(\"babe_contamination.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "      <td>Yes Trump and the right are embracing and cele...</td>\n",
        "      <td>1 (biased)</td>\n",
        "      <td>Yes Trump and the right are embracing and cele...</td>\n",
-       "      <td>It is ghoulish. It is also one more illustrati...</td>\n",
+       "      <td>It is also one more illustration that the Age ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>132</th>\n",
@@ -355,11 +355,11 @@
        "127  NeverTrump gambled on a Hillary Clinton victor...  \n",
        "26   So how did we get here, and how do we reclaim ...  \n",
        "22   They have not only revealed the incompetence o...  \n",
-       "158  It is ghoulish. It is also one more illustrati...  \n",
+       "158  It is also one more illustration that the Age ...  \n",
        "132  So the president responded in his usual and pr...  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
