--- a/checklist/analysis.ipynb
+++ b/checklist/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        " 'loadedtest_babe_base.csv']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# factual-test"
+    "# MFT: factual-test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this test we took two datasets of very simple, short, factual sentences and we want to test if our model can always predict them as unbiased. An example of a sentence from the dataset: \"Food cravings tell us that we want to eat a certain food.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,182 +106,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "      <th>preds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>What is an animal that lives underground, has ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>What do we call a plant that grows where it is...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>What do we call the bad guy in a movie? The ba...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>What do we call the good guy in a movie? The g...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>Can movies be real or make-believe? Movies can...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3141</th>\n",
-       "      <td>Rainbows do not have a taste</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3143</th>\n",
-       "      <td>J. B. Rhine attemped to prove the existence of...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3146</th>\n",
-       "      <td>Nothing happens if you clean your house on New...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3150</th>\n",
-       "      <td>Nothing happens if a shoemaker leaves unfinish...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3163</th>\n",
-       "      <td>Yes, Bruno Richard Hauptmann was sentenced to ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>86 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   text  label  preds\n",
-       "44    What is an animal that lives underground, has ...      0      1\n",
-       "88    What do we call a plant that grows where it is...      0      1\n",
-       "214   What do we call the bad guy in a movie? The ba...      0      1\n",
-       "215   What do we call the good guy in a movie? The g...      0      1\n",
-       "217   Can movies be real or make-believe? Movies can...      0      1\n",
-       "...                                                 ...    ...    ...\n",
-       "3141                       Rainbows do not have a taste      0      1\n",
-       "3143  J. B. Rhine attemped to prove the existence of...      0      1\n",
-       "3146  Nothing happens if you clean your house on New...      0      1\n",
-       "3150  Nothing happens if a shoemaker leaves unfinish...      0      1\n",
-       "3163  Yes, Bruno Richard Hauptmann was sentenced to ...      0      1\n",
-       "\n",
-       "[86 rows x 3 columns]"
+       "['Nothing in particular happens to your nose if you tell a lie',\n",
+       " 'The name of the villainous Gremlin was Stripe',\n",
+       " \"No, reindeer can't really fly\",\n",
+       " 'Yes, less than 1% of the US Federal budget is spent on foreign aid to poor countries',\n",
+       " 'Humans disagree about the healthiest and most delicious dessert',\n",
+       " 'What is a stereotype? An unfair, generalization about a group of people',\n",
+       " 'What is a thought bubble? A bubble in a comic book that shows what a character is thinking',\n",
+       " 'People disagree about the best form of government',\n",
+       " \"There's no way to invest and guarantee you'll beat inflation\",\n",
+       " 'No, pigs cannot fly']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "miss(babe)[~miss(babe)['text'].isin(miss(synth)['text'])]"
+    "# sample of 10 sentences where babe classifier wrongly predicts biased but synthetic one doesnt\n",
+    "miss(babe)[~miss(babe)['text'].isin(miss(synth)['text'])].text.sample(10).tolist()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pronouns-test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "babe=pd.read_csv('data/out/pronounstest_babe_base.csv')\n",
-    "synth=pd.read_csv('data/out/pronounstest_roberta_anno_lexical.csv')\n",
-    "magpie=pd.read_csv('data/out/pronounstest_magpie.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9711884753901561\n",
-      "0.9794344473007712\n",
-      "0.9569313593539704\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(accuracy(babe))\n",
-    "print(accuracy(magpie))\n",
-    "print(accuracy(synth))"
+    "# DIR: loaded-test"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# loaded-test"
+    "In this test, we take unbiased sentences from the BABE test set and inject biased adjectives and adverbs into them, artifically changing the label to biased. The model succeeds if it can change it's prediction to biased. The biased adjectives and adverbs are taken from the bias lexicon. We only take neutral sentences that the model was able to classify as neutral in the first place, to ensure consistency."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,15 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "babe = babe[babe['text_orig']!=babe['text_loaded']]\n",
+    "magpie = magpie[magpie['text_orig']!=magpie['text_loaded']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.41321695760598504\n",
-      "0.97\n",
+      "0.41528822055137843\n",
+      "0.96875\n",
       "1.0\n"
      ]
     }
@@ -306,7 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(magpie.text_orig.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -337,23 +243,158 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>Trump has brushed aside criticism for his deci...</td>\n",
+       "      <td>Trump has brushed freenow## aside criticism fo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>Party activists have been energized as Cory Bo...</td>\n",
+       "      <td>Party activists have been energized bully as C...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Trans sportswomen hit back at Martina Navratil...</td>\n",
+       "      <td>Trans irrelevant sportswomen hit back at Marti...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
+       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>Their work came on the heels of an IPCC report...</td>\n",
+       "      <td>Their demagogical work came on the heels of an...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>Their work came on the heels of an IPCC report...</td>\n",
+       "      <td>Their work came perversely on the heels of an ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [text_orig, text_loaded, label, preds]\n",
-       "Index: []"
+       "                                             text_orig  \\\n",
+       "211  Trump has brushed aside criticism for his deci...   \n",
+       "251  Party activists have been energized as Cory Bo...   \n",
+       "263  Trans sportswomen hit back at Martina Navratil...   \n",
+       "380  When Trump entered the White House in 2017, Lo...   \n",
+       "381  When Trump entered the White House in 2017, Lo...   \n",
+       "382  When Trump entered the White House in 2017, Lo...   \n",
+       "383  When Trump entered the White House in 2017, Lo...   \n",
+       "384  When Trump entered the White House in 2017, Lo...   \n",
+       "385  When Trump entered the White House in 2017, Lo...   \n",
+       "386  When Trump entered the White House in 2017, Lo...   \n",
+       "387  When Trump entered the White House in 2017, Lo...   \n",
+       "388  When Trump entered the White House in 2017, Lo...   \n",
+       "389  When Trump entered the White House in 2017, Lo...   \n",
+       "400  Their work came on the heels of an IPCC report...   \n",
+       "410  Their work came on the heels of an IPCC report...   \n",
+       "\n",
+       "                                           text_loaded  label  preds  \n",
+       "211  Trump has brushed freenow## aside criticism fo...      1      0  \n",
+       "251  Party activists have been energized bully as C...      1      0  \n",
+       "263  Trans irrelevant sportswomen hit back at Marti...      1      0  \n",
+       "380  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "381  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "382  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "383  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "384  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "385  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "386  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "387  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "388  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "389  When Trump entered the White House in 2017 , L...      1      0  \n",
+       "400  Their demagogical work came on the heels of an...      1      0  \n",
+       "410  Their work came perversely on the heels of an ...      1      0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "miss(synth)"
+    "miss(magpie)"
    ]
   }
  ],
