--- a/checklist/analysis.ipynb
+++ b/checklist/analysis.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score,matthews_corrcoef"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        " 'loadedtest_babe_base.csv']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -106,25 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Nothing in particular happens to your nose if you tell a lie',\n",
-       " 'The name of the villainous Gremlin was Stripe',\n",
-       " \"No, reindeer can't really fly\",\n",
-       " 'Yes, less than 1% of the US Federal budget is spent on foreign aid to poor countries',\n",
-       " 'Humans disagree about the healthiest and most delicious dessert',\n",
-       " 'What is a stereotype? An unfair, generalization about a group of people',\n",
-       " 'What is a thought bubble? A bubble in a comic book that shows what a character is thinking',\n",
-       " 'People disagree about the best form of government',\n",
-       " \"There's no way to invest and guarantee you'll beat inflation\",\n",
-       " 'No, pigs cannot fly']"
+       "['Nothing in particular happens if you give a man enough rope',\n",
+       " 'People would disagree on the most interesting man in the world',\n",
+       " 'If a lawsuit is frivolous, it lacks a legal argument',\n",
+       " 'What do we call the good guy in a movie? The good guy in a movie is called the hero.',\n",
+       " 'What happens to Pinocchio when he tells a lie? His nose grows longer.',\n",
+       " 'Nothing happens if a shoemaker leaves unfinished shoes out overnight',\n",
+       " 'You should avoid putting anything in their mouth',\n",
+       " \"What is responsibility? Doing what you're supposed to do and taking care of things that are important\",\n",
+       " 'There is no place that has rain literally all the time',\n",
+       " 'Yes, duck quacks echo']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,16 +171,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.41528822055137843\n",
-      "0.96875\n",
-      "1.0\n"
+      "0.41604010025062654\n",
+      "0.6876923076923077\n",
+      "0.6651595744680852\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy(babe))\n",
+    "print(accuracy(magpie))\n",
+    "print(accuracy(synth))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INV: locations-test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "babe=pd.read_csv('data/out/locationstest_babe_base.csv')\n",
+    "synth=pd.read_csv('data/out/locationstest_roberta_anno_lexical.csv')\n",
+    "magpie=pd.read_csv('data/out/locationstest_magpie.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9823788546255506\n",
+      "0.9856502242152466\n",
+      "0.9749445676274945\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy(babe))\n",
+    "print(accuracy(magpie))\n",
+    "print(accuracy(synth))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INV: pronouns-test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "babe=pd.read_csv('data/out/pronounstest_babe_base.csv')\n",
+    "synth=pd.read_csv('data/out/pronounstest_roberta_anno_lexical.csv')\n",
+    "magpie=pd.read_csv('data/out/pronounstest_magpie.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9711884753901561\n",
+      "0.9782608695652174\n",
+      "0.9566787003610109\n"
      ]
     }
    ],
@@ -192,210 +270,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "'They has been teaching a course on terrorism and insurgency at it in Pittsburgh for four years, and much more of his class these days is devoted to white supremacy than in the past.'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(magpie.text_orig.unique())"
+    "miss(magpie).text_ner_free.iloc[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text_orig</th>\n",
-       "      <th>text_loaded</th>\n",
-       "      <th>label</th>\n",
-       "      <th>preds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>Trump has brushed aside criticism for his deci...</td>\n",
-       "      <td>Trump has brushed freenow## aside criticism fo...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>Party activists have been energized as Cory Bo...</td>\n",
-       "      <td>Party activists have been energized bully as C...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>Trans sportswomen hit back at Martina Navratil...</td>\n",
-       "      <td>Trans irrelevant sportswomen hit back at Marti...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>380</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>381</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>385</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>386</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>387</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>388</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>389</th>\n",
-       "      <td>When Trump entered the White House in 2017, Lo...</td>\n",
-       "      <td>When Trump entered the White House in 2017 , L...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>Their work came on the heels of an IPCC report...</td>\n",
-       "      <td>Their demagogical work came on the heels of an...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>Their work came on the heels of an IPCC report...</td>\n",
-       "      <td>Their work came perversely on the heels of an ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                             text_orig  \\\n",
-       "211  Trump has brushed aside criticism for his deci...   \n",
-       "251  Party activists have been energized as Cory Bo...   \n",
-       "263  Trans sportswomen hit back at Martina Navratil...   \n",
-       "380  When Trump entered the White House in 2017, Lo...   \n",
-       "381  When Trump entered the White House in 2017, Lo...   \n",
-       "382  When Trump entered the White House in 2017, Lo...   \n",
-       "383  When Trump entered the White House in 2017, Lo...   \n",
-       "384  When Trump entered the White House in 2017, Lo...   \n",
-       "385  When Trump entered the White House in 2017, Lo...   \n",
-       "386  When Trump entered the White House in 2017, Lo...   \n",
-       "387  When Trump entered the White House in 2017, Lo...   \n",
-       "388  When Trump entered the White House in 2017, Lo...   \n",
-       "389  When Trump entered the White House in 2017, Lo...   \n",
-       "400  Their work came on the heels of an IPCC report...   \n",
-       "410  Their work came on the heels of an IPCC report...   \n",
-       "\n",
-       "                                           text_loaded  label  preds  \n",
-       "211  Trump has brushed freenow## aside criticism fo...      1      0  \n",
-       "251  Party activists have been energized bully as C...      1      0  \n",
-       "263  Trans irrelevant sportswomen hit back at Marti...      1      0  \n",
-       "380  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "381  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "382  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "383  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "384  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "385  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "386  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "387  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "388  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "389  When Trump entered the White House in 2017 , L...      1      0  \n",
-       "400  Their demagogical work came on the heels of an...      1      0  \n",
-       "410  Their work came perversely on the heels of an ...      1      0  "
+       "'Colin P. Clarke has been teaching a course on terrorism and insurgency at Carnegie Mellon University in Pittsburgh for four years, and much more of his class these days is devoted to white supremacy than in the past.'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "miss(magpie)"
+    "miss(magpie).text_orig.iloc[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INV: prejudice-test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "babe=pd.read_csv('data/out/prejudicetest_babe_base.csv')\n",
+    "synth=pd.read_csv('data/out/prejudicetest_roberta_anno_lexical.csv')\n",
+    "magpie=pd.read_csv('data/out/prejudicetest_magpie.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "babe = babe[babe.label==0]\n",
+    "synth = synth[synth.label==0]\n",
+    "magpie = magpie[magpie.label==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8947368421052632\n",
+      "0.891578947368421\n",
+      "0.8526315789473684\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy(babe))\n",
+    "print(accuracy(magpie))\n",
+    "print(accuracy(synth))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Politician\n",
+      "babe 1.0\n",
+      "magpie 1.0\n",
+      "synth 1.0\n",
+      "Gender\n",
+      "babe 0.7133333333333334\n",
+      "magpie 0.6866666666666666\n",
+      "synth 0.5733333333333334\n",
+      "Political Affiliation\n",
+      "babe 0.6866666666666666\n",
+      "magpie 0.76\n",
+      "synth 0.8533333333333334\n",
+      "Occupation\n",
+      "babe 1.0\n",
+      "magpie 0.9866666666666667\n",
+      "synth 1.0\n",
+      "Disability\n",
+      "babe 1.0\n",
+      "magpie 0.98\n",
+      "synth 1.0\n",
+      "Religion\n",
+      "babe 0.9333333333333333\n",
+      "magpie 0.8866666666666667\n",
+      "synth 0.64\n",
+      "Origin\n",
+      "babe 1.0\n",
+      "magpie 1.0\n",
+      "synth 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for category in babe.category.unique():\n",
+    "    print(category)\n",
+    "    print(f\"babe {accuracy(babe[babe.category==category])}\")\n",
+    "    print(f\"magpie {accuracy(magpie[magpie.category==category])}\")\n",
+    "    print(f\"synth {accuracy(synth[synth.category==category])}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
